# corriscope

./: README.md  __init__.py  _version.py  _version_scm.py  fpga_array.py  fpga_master.py  gps.py  mdns_discovery.py  memorybank.md  network_utils.py  pocket_correlator.py  ps.py  pyproject.toml  raw_acq.py
common/: __init__.py  async_utils.py  pfb_fft.py  udp_packet_receiver.py  util.py
corriscope/: __init__.py  _version_scm.py  calculate_gains.py  digital_gain.py  fpga_array.py  gps.py  mdns_discovery.py  network_utils.py  pocket_correlator.py  raw_acq.py
corriscope.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
corriscope/apps/: README.md  app.py  correlator.py
corriscope/apps/backend/: __init__.py  data_buffers.py  lag_computer.py  udp_processor.py
corriscope/common/: ccoll.py
corriscope/fpga_firmware/: __init__.py  fpga_firmware.py
corriscope/fpga_firmware/chfpga/: .gitignore  SocketIO.py  __init__.py  chFPGA_receiver.py  chfpga.py  mmi.py
corriscope/fpga_firmware/chfpga/ct_engine/: SHUFFLE_BIN_SEL.py  cge.py  ucap.py  ucorn.py  xxvglink.py
corriscope/fpga_firmware/chfpga/f_engine/: adcdaq.py  chan.py  funcgen.py  prober.py  scaler.py
corriscope/fpga_firmware/chfpga/system/: freqctr.py  i2c.py  refclk.py  sysmon.py
corriscope/fpga_firmware/chfpga/x_engine/: UCORR.py
corriscope/hardware/: crate.py  mezzanine.py  motherboard.py
corriscope/hardware/crs/: CRS_CHORD_3000MHz.py.old  __init__.py  crs.py
corriscope/hardware/i2c_devices/: gpio.py  hmc7044.py  lmk04208spi.py  lmx2594spi.py  pca6524.py  pca8574.py  pca9546a.py  qsfp.py  sc18is602b.py
corriscope/hardware/i2c_devices/ssd1306/: __init__.py  display.py  ssd1306.py
corriscope/hardware/interfaces/: fpga_mmi.py  ipmi_fru.py  tcpipe.py  udp.py
fpga_firmware/: fpga_bitstream.py
fpga_firmware/chfpga/: __init__.py  chfpga.py
fpga_firmware/chfpga/ct_engine/: bct_engine.py  chan_bin_sel.py  chan_crossbar.py  gpu.py  shuffle.py  shuffle_crossbar.py  ucap.py  uct_engine.py  xglink.py
fpga_firmware/chfpga/f_engine/: fft.py
fpga_firmware/chfpga/system/: gpio.py  i2c.py  spi.py
fpga_firmware/chfpga/x_engine/: CORR.py  UCORR.py
hardware/: __init__.py  hardware_map.py  mezzanine.py
hardware/crs/: crs.py  crs_bp.py
hardware/crs/arm_firmware/: CRS_arm_firmware_README.txt  fsbl.elf
hardware/i2c_devices/: TICSPRO_loader.py  amc6821.py  eeprom.py  ina230.py  pca9575.py  pca9698.py  tca6416a.py  tca9544a.py  tca9548a.py  tmp100.py  tmp421.py
hardware/i2c_devices/ssd1306/: font.py
hardware/interfaces/: __init__.py  bsb_mmi.py  fpga_mmi.py  i2c_interface.py
pychfpga.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
